getting into detail of terminology

--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -154,6 +154,8 @@ Saskia Leggett is a researcher who was active in the in Creative Family Learning
 In my analysis, I have proritised data which in forms the first research question and specifically addressing barriers and tensions for both practitioners and participants which exist in this domain of activity.
 NOTE - REVIEW THIS BASED ON THEORETICAL LANGUAGE - PERHAPS OBSTACLES, CONTRADICTIONS, TENSIONS AND INTERVENTIONS.
 
+
+
 _Table of initial data_
 
 https://docs.google.com/document/d/1aEF0EsZRe-Ovok2VP7ouYH_v-SdepnNnXFhLtj6SseU/edit
@@ -588,9 +590,19 @@ https://docs.google.com/document/d/1FIPn2dEB2aCKZi5z05j69cnHgpGNXFh1_SPV6h5l12g/
 
 <!-- NOTE - DEVELOP THIS ASPECT OF INCLUSIVE ENVIRONMENT TO REDUCE STRESS - MOVE FROM NEXT CHAPTER?  -->
 
+
+### Disambiguating terminology - Conflicts, tensions, contradictions, dilemmas
+
+
 As explored in the theoretical framework in activity theory tensions and contradictions are a vital source of change and evolution of new and ongoing activity systems.   
 
 To avoid the dangers of the vague use of the terms tensions and contractions [@karanasios_exploring_2017], this chapter will aim to be more descriptive.  
+
+While guided by teh concept of analyising manifestations of systemic contracditions, [cakir_contradictions_2022; engestrom_discursive_2011] this study does not use that detailed framework
+A wider lens is used instead, that of Rogoff's 3 foci helps to situate realms of contradictions. 
+
+
+INSTEAD?
 
 
 NOTE - there is also the concept of congruencies - or strengths within activity systems. Where appropriate these systems strengths and positive alignments are helpful to note [@kamanga_contradictions_2021].
