--- a/_posts/thesis_chapters/2023-9-5-Gdps.md
+++ b/_posts/thesis_chapters/2023-9-5-Gdps.md
@@ -101,17 +101,18 @@ In the last chapter we explored inclusive pedagogical methods that helped partic
 
 ### Chapter outline
 
-In the following sections, I draw on such detailed observations of participants in practice to outline how GDPs are used by participants.
+This chapter begins with reframing of game design patterns and game play design patterns which builds on the previous chapters description of the emerging learning design.
 
-This chapter begins with a Vignette of parent child interaction in game making process. The vignette is used to introduce an overview of interactions of that pair generated from analysis of video data.
+Following this a Vignette of parent child interaction in game making process. The vignette is used to introduce an overview of interactions of that pair generated from analysis of video data.
+
+I draw on detailed observations of participants in practice to outline how GDPs are used by participants.
+
 
 The chapter then focuses on the use of game design patterns by participants in these interactions. A summary of these is available as a table.
 
 Finally a discussion section explores implications and observations from these findings in relation to existing research and concepts.
 
 <!-- In that community-focused analysis, the unit of activity/ analysis was the creation by individuals learners or pairs of an engaging game with an additional goal of exploring an environmental concept.  The implementation of GDPs as a unit of activity allows for a more detailed and granular exploration of the many actions and operations that comprise each pattern.  -->
-
-
 
 <!-- ## Other Documents
 NOTE MOVE THESE TO THE RELEVANT CHAPTERS SOON
@@ -126,9 +127,25 @@ And the coding structure here
 https://docs.google.com/document/d/19PafC_w_7uObYL4v86IGeeFZTw2yKxjHfP_k85rHk_s/edit# -->
 
 
-### On GDP as unit of analyis
+## Reframing design pattern in this context
+
+Recap on the value of design patterns in learning design which exist at different scopes of activity [@mcandrew_patterns_2006].
+
+How design patterns interplay with design principles and how the process relates to design based research  [@linn_science_2006].
+
 
 NOTE  - WHERE TO PUT THIS?
+
+### On GDP as a Germ cell / rising to the concrete
+
+The theoretical framework invites discussion on what is the germ cell of the overall game making activity. While this concept is more typically used in a larger scope of societal activity I invite discussion on how it applies at this smaller scope.  I propose that it is the  implementation of game features design pattern that forms the germ cell of this game making activity.
+
+The smaller changes described in the last chapter constitute a formative, scaffolding process to help participants prepare for the foundational activity of deciding on and implementing gameplay design patterns.
+
+
+
+### On GDP as unit of analysis
+
 
 The implementation of GDPs as a unit of analysis for the researcher also has the following utility / validity;
 
