looking particularly at authenticity

--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -570,7 +570,9 @@ NOTE - Explore how performed in line with other research - e.g. DBR (Barab) and 
 
 **Transition**
 
-In a simlar approach to Rogoff's 3 lenses of cultural, social and personal activity analysis of activity using the scopes of activity systems explore above is useful to researchers to highlight possible tensions and contradictions between competing goals of interrelated activity systems. For example a common contradiction may be an immediate goal of children to mess around, play games and have fun while the goals of parent may be to maximise the acquisition of skills
+It is useful to researchers to highlight possible tensions and contradictions between competing goals of interrelated activity systems.
+
+For example a common contradiction may be an immediate goal of children to mess around, play games and have fun while the goals of parent may be to maximise the acquisition of skills
 
 
 ## Conflicts and design tensions experienced by participants and facilitator/s
@@ -599,7 +601,7 @@ As explored in the theoretical framework in activity theory tensions and contrad
 To avoid the dangers of the vague use of the terms tensions and contractions [@karanasios_exploring_2017], this chapter will aim to be more descriptive.  
 
 While guided by teh concept of analyising manifestations of systemic contracditions, [cakir_contradictions_2022; engestrom_discursive_2011] this study does not use that detailed framework
-A wider lens is used instead, that of Rogoff's 3 foci helps to situate realms of contradictions. 
+A wider lens is used instead, that of Rogoff's 3 foci helps to situate realms of contradictions.
 
 
 INSTEAD?
@@ -624,11 +626,13 @@ In the following sections of this chapter I focus on such which relate directly 
 
 This section is written from my own perspectives to inform discussion on design tensions. The process here is driven not only from user feedback but also on a more intuitive experience as an experienced facilitator in this field. I also draw on the tensions explored in the previous exploration of fellow participants. I  focus on tensions involving authenticity as a precursor to exploring their relationship with participation experience of agency.
 
+#### Tensions surrounding authenticity of tool use
+
 Rainer, Bolton and other practitioner-researchers agree on the potential and value of exploring other subject matter - e.g.  literacy, maths, science and history -  and undertaking authentic project work within a drama frame [-@rainer_drama_2012].
 
 This authenticity has several relevant dimensions in this study including: audience; toolset; and supportive processes / documentation. This section explores the these dimensions of authenticity and the resulting relationships with agency of the learners.
 
-#### Tensions surrounding authenticity of tool use
+
 
 PBL is adapted to schools in many settings thus, authenticity is "on a scale" in PBL  The concept of an authentic-as-possible project is a key tool for educators to support game making via project based learning [find support]. One advatange of working with digital tools is that if issues of complexity and cost can be addressed access to laptops and the internet allow learners to use very similar production tools to professionals.
 
