introducing germ cell in design chapter

--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -88,8 +88,6 @@ title: 4. Exploration of the Formative Learning Design Process
 
 
 ## Notes on structure
-
-
 <!-- NOTE:
 Moved impact of software tools here - and overall on templated approach on a micro level  -  which therefore becomes less of this study's focus - and needs less evidence -->
 
@@ -108,6 +106,8 @@ In most of this chapter focus on the tools and authenticity in relation to other
 Also the practitioner interviews - could be a bit disjointed - as they do relate to cultural barriers and tactics. But could say those are explored in other chapters. DONE
 
 
+
+
 ## Chapter Introduction  
 
 This chapter
@@ -117,6 +117,7 @@ This chapter
 - draws on immediate analysis of participants reactions and contributions from journal notes, and participant interviews and analysis of changes in the learning resources created to present an exploration of tensions
 - explores 2 key conflicts using the terminology of Saninno in TADS
 - Presents a synthesis to initial barriers (and) tactics to overcome them
+- Introduces the use of design patterns and collections of patterns, as the germ cell of activity which then expands in different directions.
 
 Due to the novel nature of the learning design the detailed outline of the specifics of the participants experience of the design are important to situate findings in the following two chapters.
 
@@ -567,6 +568,18 @@ Break down that of GDPs? -->
 This has utility to both researcher and learning designer. The observations of the following chapters are based on this approach of using lenses to focus in on relevant activity.
 
 NOTE - Explore how performed in line with other research - e.g. DBR (Barab) and possibly Bevan and Petrich -->
+
+
+
+### Exploring game design patterns and germ cell of activity
+
+Proposed new location to first introduce this idea.
+
+P1 was chaotic, but yielded this way of working. Proposed new features, some where held in common with other groups.
+
+The smaller activities used to kick start other game makers were an accelerated version of the full process, proposing modification instead of new code structures.
+
+
 
 **Transition**
 
