work on thread of authenticity

--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -101,11 +101,9 @@ Moved impact of software tools here - and overall on templated approach on a mic
 
 However in terms of tensions - there is one on cultural tensions - this may need moving to the next chapter - a more thematic approach.
 
-In most of this chapter focus on the tools and authenticity in relation to other tools.
+This chapter has a particular focus on the tools and authenticity in relation to other tools. This focus develops a thread of theoretical inquiry around the impact of authenticity of tools and processes in activity systems of learners experiences of activity systems and particular on building agency in
 
 Also the practitioner interviews - could be a bit disjointed - as they do relate to cultural barriers and tactics. But could say those are explored in other chapters. DONE
-
-
 
 
 ## Chapter Introduction  
@@ -940,6 +938,35 @@ The conflict comprised of compounding factors and resulted in a lack of desire t
 In the initial stages some families struggled to reconcile the obstacles presented but their active participation in warm up games shows ....
 
 INSERT SOME ANALYSIS HERE BASED ON AGENCY AND AFFORDENCES OFFERED
+
+
+
+#### Discussion on Authenticity within this conflict and playground as resolution
+
+What does authenticity of tools mean in this context and configuration?
+CROSSREF - CALL BACK TO DISCUSSION OF AUTHENTICITY IN LITERATURE REVIEW. 
+
+- similar to workplace
+- has a real purpose for Participants
+- can be showcased in public for an external audience
+
+The process of using coding tools is authentic but challenging.
+The creation of a template and mini challenges helped address this.
+
+For example in p1 iteration, code framework is authentic, js. code playground less so aimed at learners, and the process unstrucutred.
+
+While tempting to say that the use of a template is eductional scaffolding and therefore not authentic to a work place setting environment
+
+While, initially conceived as a starting activity, many learners stuck with those possibilities for a long period of time.
+
+The next stage was to imagine game elements to add to the design in the form of GDPs.
+The next chapter explores the use of GDPs by participants in detail using varied data.
+
+
+
+
+
+
 
 The next chapter explores responses to the aspect of identity in more detail.
 
