--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -246,6 +246,18 @@ Screen shot of the menu of choices. -->
 
 ## Short vignette illustrating shifts in scope of activity
 
+### Outline of Game Making Tools used in this vignette
+
+These tools are of use by both professionals and novice coders. The use by indy communities blurs the line also.
+
+#### Code Playgrounds
+
+Find definition
+
+NOTES ON CODE PLAYGROUNDS
+However in its styling it is playful and editorial picks and write up celebrate a playful spirit of creativity and sharing. There are strong parallels in this presentation to that Scratch community and to the sharing ethos integral to the maker-movement (explored in Lit Review). The interplay between play and work via shared experimentation is developed further in a later discussion chapter.
+
+
 ### Context of  Vignette
 
 The following vignette, consisting of extracts of participant activity over 20 mins of a session, is presented as an summary of different scopes of activity. The participant is the child Toby who in this session has been working independently.
@@ -721,10 +733,6 @@ There were some issues of access for some participants who did not remember or r
 <!-- NOTE - LINK TO OTHER KINDS OF ERRORS - NEXT CHAPTER -->
 
 
-
-
-
-
 ### Impact of the half-baked game template
 
 <!-- NOTE SOME OF THIS CAN  -->
@@ -944,7 +952,7 @@ INSERT SOME ANALYSIS HERE BASED ON AGENCY AND AFFORDENCES OFFERED
 #### Discussion on Authenticity within this conflict and playground as resolution
 
 What does authenticity of tools mean in this context and configuration?
-CROSSREF - CALL BACK TO DISCUSSION OF AUTHENTICITY IN LITERATURE REVIEW. 
+CROSSREF - CALL BACK TO DISCUSSION OF AUTHENTICITY IN LITERATURE REVIEW.
 
 - similar to workplace
 - has a real purpose for Participants
