germ cell vs unit of activity where does it live

--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -449,8 +449,7 @@ Activity Theory allows researchers to identify intersecting or nested systems of
 Subsequent analysis of the identified activity systems allows both the researcher and practitioner to identifying existing and emerging tensions and to thus observe (spontaneous) or plan (designed) responses.
 A short description of the activity systems follows using the to the vignette above to anchour the process.
 
-#### Diverse Environmental Objectives
-
+#### Environmental Factors and Objectives
 
 There are several wider objectives of activity which may vary  including; parents facilitating coding and design learning for children, the children's motivations of being part of a fun club-like programme, and my own motivation of conducting research.
 
@@ -474,7 +473,7 @@ NOTE - The purpose of this following description is to situate the reader in ful
 Table 4.x.  Tools used in larger-scoped objective involving the wider community of notice coders collectively making separate games. -->
 
 
-#### Wider Objective - Making games for an audience
+#### Shared larger objective - Making games for an audience
 
 In this larger scoped activity system the direct objective of the activity is to make games which are fun for the intended audience to play and which explores an environmental theme.
 
@@ -483,7 +482,7 @@ As previously indicated, other high level objectives exist including: research g
 
 Insert an AT diagram from here - https://docs.google.com/presentation/d/1vR6dzFG6qXIdpB_-s6PbCePiB87qTs6YAXCljxNcb5Y/edit#slide=id.g57b5e8e9ad_0_0
 
-![At Dia 1](./Pictures/At_dia_1_v1.png){width=95%}
+![At Dia 1](./Pictures/At_dia_2_v1.png){width=95%}
 
 In exploring the community of the activity system.
 
@@ -497,7 +496,7 @@ Toby begins the game making session playing his own game which he has developed 
 
 Analysis TO COME.
 
-#### Intermediate Objective - Implementing a game element
+#### Smaller objective - Implementing game elements
 
 <!-- | Subject         | Objective             | Tools & Processes          |
 |------|-------------|------------|
@@ -510,7 +509,7 @@ Analysis TO COME.
 
 Table 4.x.  Tools used in mid-level objectives when selecting and planning implementation of game elements. -->
 
-![At Dia 2](./Pictures/At_dia_2_v1.png){width=95%}
+![At Dia 2](./Pictures/At_dia_1_v1.png){width=95%}
 
 <!-- One observation from he experimental course was that without significant support, the process of making a game is complex and there are many possible blockages in the process. -->
 
@@ -588,6 +587,9 @@ Proposed new location to first introduce this idea.
 P1 was chaotic, but yielded this way of working. Proposed new features, some where held in common with other groups.
 
 The smaller activities used to kick start other game makers were an accelerated version of the full process, proposing modification instead of new code structures.
+
+The implementation of discreet but potentially shared game elements became a shared pattern of activity. Mutual work to produce resources, testing techniques and practices to share and evaluate these shared elements became a primary focus of work. This matches conceptions of germ cell concepts in the previous chapter from Engestrom. 
+
 
 
 
