--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -269,125 +269,6 @@ https://docs.google.com/document/d/1vYeVxYaRMTWPDOHwC4DEGYAkGPRIDX7wLiz0l8b7LWc/
 This sections outlines a short description of the vignette above focusing on the overall activity and its place within evolution of learning design.
 It will signpost to where tensions in the activity system are explored in this chapter.  
 
-## Summary of design evolution
-
-<!-- [Summary Table of Stages](https://docs.google.com/document/d/1tBoXJWw-aZUcc8EsAvT195CtHLSM468YOCD0sGzOuoA/edit#)
-see updated table in tables subdirectory  
--->
-
-The following table is provided to give the reader an overview of the stages and tools used. Emerging tensions in activity systems are used to explore the rationale for the creation and selection of these tools.
-
-
-<!-- Table from
-https://docs.google.com/document/d/1tBoXJWw-aZUcc8EsAvT195CtHLSM468YOCD0sGzOuoA/edit# -->
-
-| **Phase, Name and Date**| **Description** | **Starting Resources**         
-|--------|------------|--------------|
-|P1: Oct 2017 - Mar 2018; Experimental Course  | Participants started with a blank canvas and were asked to plan and make a game in two larger groups of 5-6 participants of mixed ages. A minimal incomplete starting game code template was introduced to support students after the course has started.  |  Phaser 2.6.2 javascript library; Thimble code playground; online graphics editor Piskel; audio creation tools  |
-| P2: May 2018 - Dec 2018; Resource Development Stage | One-off workshops at Mozilla and Feral Vector conferences and to PGCE computer students helped focus and the creation of a “half baked” game template and supporting online and printable resources.  |  Phaser; Glitch code playground; quick start cards; incomplete game template |
-| P3: Jan - Feb 2019; Glitch Game Club | First iteration of game making course of 5-6 weeks. The template and resources created in the previous stage were used as a starting point but continued to evolve. |  Phaser; Glitch, Piskel; updated game template; quick start cards; step-by-step tutorials; code examples  |
-| P4: May 2019; Glitch Game Club 2| Second iteration of game making course with additional drama and reflective elements |  As per P3; drama scenario; interactive chat page in glitch  |
-| P5: Jan 2020 - September 2020; Make Code Arcade | Two iterations of game making course of 5-6 weeks using MakeCode Arcade tool.  |  Make Code Arcade (MCA) tool; MCA Template starting game; MCA quick start cards; MCA game pattern menu; MCA game pattern tutorials; Learning Dimensions Map   |
-
-
-## Commentary on evolution of design by Phase
-
-### P1 and P2: Explorations and innovations
-
-<!-- NOTE - The evolution involves phases and then tension - what and how to cover both?  -->
-<!-- This phase took place before the official start of this research and relevant ethics application. As such,  -->
-
-Phase one was an extended, exploratory series of game making sessions over several months. This stage was aimed not at collecting user data rather than building my own background knowledge and competency as a facilitator.
-
-<!-- The first phase of delivery in late 2018 was based on initial research stage; I drew on literature to identify factors to consider when designing for collaboration, adopting a project based approach inspired by design thinking.  -->
-<!-- To inculcate parents and children in to the culture of retro video games I began initial sessions by inviting participants to older arcade games on laptops. -->
-<!-- Game filled laptops.  
-Should this be added to the table above
--->
-<!-- The tools allow participants to create games using a combination of a free to use online tools.
-an online  coding environment
-using the phaser javascript game library (glitch.com), a pixel art editor (piskelapp.com), and a sound effect generator (sfbgames.com/chiptone). -->
-
-In terms of supporting resources, stage one was responsive; I had no pre-existing supporting materials and created a starting code framework of a platform game and code examples to add extra functionality to the game as the programme developed.
-
-A final public showcase - At the end of this stage participants showed their games to students in the foyer of the MMU Brooks building and gave me feedback on their participation in the programme.
-
-Feedback from participants this stage included; a general consensus that the process was too long and that more guidance in the process of familiarising themselves the coding tools initially before undertaking ideation would be useful.
-
-Other emerging tensions and participant conflicts are explored in the next section of this chapter. Phase two comprised one-off workshops at summer conferences and to PGCE computing students.
-
-The requirements of this compressed time frame aligned with feedback to prompt me to design an accelerated process to bump start the game-production process.
-
-The new intervention involved a starting template and printable resources that highlighted particular key lines of code and variables that had a high impact on the game experiences.
-
-<!-- Have a look at this document which outlines Structuring and Scaffolding Phaser Activities from Phaser Book
-https://docs.google.com/document/d/1lk-8dHFFNbFXFtE5vV6_GHXYRzU7ATWZAIe-hNunyx8/edit#
- -->
-
-<!-- #### The half-baked starting platformer game
-
-NOTE - ALSO EXPLORED IN NEXT CHAPTER - HOW TO ARRANGE?
-
-The use and design characteristics of the starting point of a half-baked game.
-
-- Phaser 2 to avoid complexity of code structure
-- 2D platformer - familiar to most - Mario and Sonic
-- low-spec graphics
-- game of player, platforms, and coins to collect and hazards to avoid.
-- graphical level design
-- key variables brought to the top
-- simple structure of code in terms of aligning with framework and not adding extra functions
-
-
-**Variable editing effective movement**
-
-Player movement was a key to playtesting feedback as such three  key variables were highlighted at the very start of the game code and given descriptive names to facilitate their editing. When testing the game, the player's jump height was not great enough to allow progression up from the floor to one of the platform thus thwarting the collection of items.
-
-Game progression require altering at least one of the descriptively names variables associated with jump height and then activating a preview window to observer the changes by playing the game in a new browser tab.
-<!--FIND  Some evidence of building proficiency with significant work to change these three   
-
-    // Variables that change how the player moves
-    var gravity = 500;
-    var velocity_x = 100;
-    var velocity_y = 300;
-
-While some participants engaged with extensive experimentation to find a player movement feel that seemed just right, others were much less concerted with this aspect of game play, lowering gravity drastically to allow a greater jump size but a more frustrating floaty jump.
-
-**Level design and prototyping**
-
-The starting game template included a minimal amount of platforms, hazards to avoid and golden blocks to collect. Image 4.x above show a printable _quick start_ cards to aid participants to begin the process of changing level design.
-
-As preThe possibility of disturbing the syntax of the  of code in the array. When participant did this it provided a good opportunity for facilitators or parents to outline the importance of correct syntax of and to explain the code structure.
-
-The vignette in the last chapter saw Toby's adding new levels to his game and undertaking many iterations of changes to the level design. He and several other participants spent extensive time performing level design activity with a goal of making the game extremely challenging but still technically possible. Others played with the convention of the game by removing all hazards and filling the screen with rewards/coins (an example is outlined in the starting vignette of the next chapter).
-
-**Incomplete graphical blocks & Piskel**
-
-The use of blank, coloured blocks of 32 x 32 pixels encouraged participants to change the graphical design and the relatively small size of the sprites encouraged rapid design.
-
-PERHAPS REPLACE THIS WITH SCREEN SHOT OF PISKEL AS A TOOL
-![](./Pictures/whale_1.png){width=50%}
-
-The process of creating a pixel art characters and hazard involved using an online grid design tool called Piskel, creating an design of an appropriate size, saving, exporting as an image, downloading to the hard drive of the laptop in use and finally uploading and incorporating the image into the code project and linking using code syntax.
-
-**Incomplete graphical blocks & Piskel**
-
-The
-
-PARK FOR NOW - Maybe move to Design
-The concept of the feel of the game or the challenges maps to the Dynamics of MDA framework.
- -->
-
-
-### P3 and P4: The main game making programmes
-
-By P3 most of the resources and activities were in place and relatively stable. There were some incremental evolutions in the supporting resources that stemmed from participant feedback and detailed reading of relevant literature.
-
-One key addition brought to start of P3 was a more coherent list of tutorials and code examples illustrating key game features that had been requested by participants. These were presented in a web page together with the starting template as a collection of game design patterns.
-
-P4 used the same toolset as P3 however in addition, drew on my previous work with the MMU Faculty of Education drama department [@caldwell_drama_2019] to create a simple drama process to give an external motivation and narrative to the creation of games using for a fictional audience of visiting aliens.
-
-The participant activity of these stages and tensions between system elements are discussed in detail in the remainder of this chapter and in following chapters.
 
 
 <!-- This approach aligns with inclusive education principles in that it increases the choices of students, scaffolds the way they can access resources and allows them to keep a track of their own progress. -->
@@ -431,13 +312,6 @@ I translated player types to maker types based on notes in my observation journa
 <!-- there's a limit here as the drama scenario is done on people already engaged
 so there's a problem in getting any data from this
 however the rationale is intact and  -->
-
-### P5: Adapting to MakeCode Arcade and more formal settings
-
-I ran two iterations of game making course of 4-5 weeks using MakeCode Arcade tool. MakeCode Arcade uses block language system. The template, resources and facilitation approach was based that of P3 and P4.
-
-I also adapted and advanced resources with an aim that they could be used within secondary classrooms to support computing curriculum. To do this I added a learning dimensions map. This is explored in a later section of this chapter.
-
 
 
 ### Description of the nested levels of activity & tools used
@@ -588,7 +462,8 @@ P1 was chaotic, but yielded this way of working. Proposed new features, some whe
 
 The smaller activities used to kick start other game makers were an accelerated version of the full process, proposing modification instead of new code structures.
 
-The implementation of discreet but potentially shared game elements became a shared pattern of activity. Mutual work to produce resources, testing techniques and practices to share and evaluate these shared elements became a primary focus of work. This matches conceptions of germ cell concepts in the previous chapter from Engestrom. 
+The implementation of discreet but potentially shared game elements became a shared pattern of activity. Mutual work to produce resources, testing techniques and practices to share and evaluate these shared elements became a primary focus of work. This matches conceptions of germ cell concepts in the previous chapter from Engestrom.
+
 
 
 
@@ -598,6 +473,139 @@ The implementation of discreet but potentially shared game elements became a sha
 It is useful to researchers to highlight possible tensions and contradictions between competing goals of interrelated activity systems.
 
 For example a common contradiction may be an immediate goal of children to mess around, play games and have fun while the goals of parent may be to maximise the acquisition of skills
+
+
+As a starting point - a description of phases.
+
+
+
+## Summary of design evolution
+
+<!-- [Summary Table of Stages](https://docs.google.com/document/d/1tBoXJWw-aZUcc8EsAvT195CtHLSM468YOCD0sGzOuoA/edit#)
+see updated table in tables subdirectory  
+-->
+
+The following table is provided to give the reader an overview of the stages and tools used. Emerging tensions in activity systems are used to explore the rationale for the creation and selection of these tools.
+
+
+<!-- Table from
+https://docs.google.com/document/d/1tBoXJWw-aZUcc8EsAvT195CtHLSM468YOCD0sGzOuoA/edit# -->
+
+| **Phase, Name and Date**| **Description** | **Starting Resources**         
+|--------|------------|--------------|
+|P1: Oct 2017 - Mar 2018; Experimental Course  | Participants started with a blank canvas and were asked to plan and make a game in two larger groups of 5-6 participants of mixed ages. A minimal incomplete starting game code template was introduced to support students after the course has started.  |  Phaser 2.6.2 javascript library; Thimble code playground; online graphics editor Piskel; audio creation tools  |
+| P2: May 2018 - Dec 2018; Resource Development Stage | One-off workshops at Mozilla and Feral Vector conferences and to PGCE computer students helped focus and the creation of a “half baked” game template and supporting online and printable resources.  |  Phaser; Glitch code playground; quick start cards; incomplete game template |
+| P3: Jan - Feb 2019; Glitch Game Club | First iteration of game making course of 5-6 weeks. The template and resources created in the previous stage were used as a starting point but continued to evolve. |  Phaser; Glitch, Piskel; updated game template; quick start cards; step-by-step tutorials; code examples  |
+| P4: May 2019; Glitch Game Club 2| Second iteration of game making course with additional drama and reflective elements |  As per P3; drama scenario; interactive chat page in glitch  |
+| P5: Jan 2020 - September 2020; Make Code Arcade | Two iterations of game making course of 5-6 weeks using MakeCode Arcade tool.  |  Make Code Arcade (MCA) tool; MCA Template starting game; MCA quick start cards; MCA game pattern menu; MCA game pattern tutorials; Learning Dimensions Map   |
+
+
+## Commentary on evolution of design by Phase
+
+### P1 and P2: Explorations and innovations
+
+<!-- NOTE - The evolution involves phases and then tension - what and how to cover both?  -->
+<!-- This phase took place before the official start of this research and relevant ethics application. As such,  -->
+
+Phase one was an extended, exploratory series of game making sessions over several months. This stage was aimed not at collecting user data rather than building my own background knowledge and competency as a facilitator.
+
+<!-- The first phase of delivery in late 2018 was based on initial research stage; I drew on literature to identify factors to consider when designing for collaboration, adopting a project based approach inspired by design thinking.  -->
+<!-- To inculcate parents and children in to the culture of retro video games I began initial sessions by inviting participants to older arcade games on laptops. -->
+<!-- Game filled laptops.  
+Should this be added to the table above
+-->
+<!-- The tools allow participants to create games using a combination of a free to use online tools.
+an online  coding environment
+using the phaser javascript game library (glitch.com), a pixel art editor (piskelapp.com), and a sound effect generator (sfbgames.com/chiptone). -->
+
+In terms of supporting resources, stage one was responsive; I had no pre-existing supporting materials and created a starting code framework of a platform game and code examples to add extra functionality to the game as the programme developed.
+
+A final public showcase - At the end of this stage participants showed their games to students in the foyer of the MMU Brooks building and gave me feedback on their participation in the programme.
+
+Feedback from participants this stage included; a general consensus that the process was too long and that more guidance in the process of familiarising themselves the coding tools initially before undertaking ideation would be useful.
+
+Other emerging tensions and participant conflicts are explored in the next section of this chapter. Phase two comprised one-off workshops at summer conferences and to PGCE computing students.
+
+The requirements of this compressed time frame aligned with feedback to prompt me to design an accelerated process to bump start the game-production process.
+
+The new intervention involved a starting template and printable resources that highlighted particular key lines of code and variables that had a high impact on the game experiences.
+
+<!-- Have a look at this document which outlines Structuring and Scaffolding Phaser Activities from Phaser Book
+https://docs.google.com/document/d/1lk-8dHFFNbFXFtE5vV6_GHXYRzU7ATWZAIe-hNunyx8/edit#
+ -->
+
+<!-- #### The half-baked starting platformer game
+
+NOTE - ALSO EXPLORED IN NEXT CHAPTER - HOW TO ARRANGE?
+
+The use and design characteristics of the starting point of a half-baked game.
+
+- Phaser 2 to avoid complexity of code structure
+- 2D platformer - familiar to most - Mario and Sonic
+- low-spec graphics
+- game of player, platforms, and coins to collect and hazards to avoid.
+- graphical level design
+- key variables brought to the top
+- simple structure of code in terms of aligning with framework and not adding extra functions
+
+
+**Variable editing effective movement**
+
+Player movement was a key to playtesting feedback as such three  key variables were highlighted at the very start of the game code and given descriptive names to facilitate their editing. When testing the game, the player's jump height was not great enough to allow progression up from the floor to one of the platform thus thwarting the collection of items.
+
+Game progression require altering at least one of the descriptively names variables associated with jump height and then activating a preview window to observer the changes by playing the game in a new browser tab.
+<!--FIND  Some evidence of building proficiency with significant work to change these three   
+
+    // Variables that change how the player moves
+    var gravity = 500;
+    var velocity_x = 100;
+    var velocity_y = 300;
+
+While some participants engaged with extensive experimentation to find a player movement feel that seemed just right, others were much less concerted with this aspect of game play, lowering gravity drastically to allow a greater jump size but a more frustrating floaty jump.
+
+**Level design and prototyping**
+
+The starting game template included a minimal amount of platforms, hazards to avoid and golden blocks to collect. Image 4.x above show a printable _quick start_ cards to aid participants to begin the process of changing level design.
+
+As preThe possibility of disturbing the syntax of the  of code in the array. When participant did this it provided a good opportunity for facilitators or parents to outline the importance of correct syntax of and to explain the code structure.
+
+The vignette in the last chapter saw Toby's adding new levels to his game and undertaking many iterations of changes to the level design. He and several other participants spent extensive time performing level design activity with a goal of making the game extremely challenging but still technically possible. Others played with the convention of the game by removing all hazards and filling the screen with rewards/coins (an example is outlined in the starting vignette of the next chapter).
+
+**Incomplete graphical blocks & Piskel**
+
+The use of blank, coloured blocks of 32 x 32 pixels encouraged participants to change the graphical design and the relatively small size of the sprites encouraged rapid design.
+
+PERHAPS REPLACE THIS WITH SCREEN SHOT OF PISKEL AS A TOOL
+![](./Pictures/whale_1.png){width=50%}
+
+The process of creating a pixel art characters and hazard involved using an online grid design tool called Piskel, creating an design of an appropriate size, saving, exporting as an image, downloading to the hard drive of the laptop in use and finally uploading and incorporating the image into the code project and linking using code syntax.
+
+**Incomplete graphical blocks & Piskel**
+
+The
+
+PARK FOR NOW - Maybe move to Design
+The concept of the feel of the game or the challenges maps to the Dynamics of MDA framework.
+ -->
+
+
+### P3 and P4: The main game making programmes
+
+By P3 most of the resources and activities were in place and relatively stable. There were some incremental evolutions in the supporting resources that stemmed from participant feedback and detailed reading of relevant literature.
+
+One key addition brought to start of P3 was a more coherent list of tutorials and code examples illustrating key game features that had been requested by participants. These were presented in a web page together with the starting template as a collection of game design patterns.
+
+P4 used the same toolset as P3 however in addition, drew on my previous work with the MMU Faculty of Education drama department [@caldwell_drama_2019] to create a simple drama process to give an external motivation and narrative to the creation of games using for a fictional audience of visiting aliens.
+
+The participant activity of these stages and tensions between system elements are discussed in detail in the remainder of this chapter and in following chapters.
+
+### P5: Adapting to MakeCode Arcade and more formal settings
+
+I ran two iterations of game making course of 4-5 weeks using MakeCode Arcade tool. MakeCode Arcade uses block language system. The template, resources and facilitation approach was based that of P3 and P4.
+
+I also adapted and advanced resources with an aim that they could be used within secondary classrooms to support computing curriculum. To do this I added a learning dimensions map. This is explored in a later section of this chapter.
+
+
 
 
 ## Conflicts and design tensions experienced by participants and facilitator/s
