shift terms to the beginning of the chapter - as much as possible

--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -314,6 +314,31 @@ so there's a problem in getting any data from this
 however the rationale is intact and  -->
 
 
+
+### Disambiguating terminology - Conflicts, tensions, contradictions, dilemmas
+
+
+As explored in the theoretical framework in activity theory tensions and contradictions are a vital source of change and evolution of new and ongoing activity systems.   
+
+To avoid the dangers of the vague use of the terms tensions and contractions [@karanasios_exploring_2017], this chapter will aim to be more descriptive.  
+
+While guided by the concept of analysing manifestations of systemic contradictions, [cakir_contradictions_2022; engestrom_discursive_2011] this study does not use that detailed framework
+
+NOTE - there is also the concept of congruencies - or strengths within activity systems. Where appropriate these systems strengths and positive alignments are helpful to note [@kamanga_contradictions_2021].
+
+On a smaller scale, design tensions exist. These do not block progress completely but may disrupt some activities. Combinations of tensions can compound to create longer lasting and more serious conflicts if not resolved [Engestrom early]. The concept of levels of contradictions are helpful [@sannino_cultural-historical_2018] the forth being a conflict.
+
+In Sannino's later work on transformational agency TADS conflicts are examined - greater scope than tensions - thus larger shifts are implied.
+
+It also useful to recap here the interpretations of agency explored in the theoretical framework. (NOTE IS IT OR SHOULD I JUST PICK TADS AND USE THAT LANGUAGE?) Instrumental agency is relevant here to help examine and the work of learning designers to remove  barriers, Transformational and authorial agency serves to explore the potential for learners to address and overcome tensions and conflicts in their own way.
+
+<!-- (Relational agency?) -->
+
+In the process of reflection on sessions I both observed and project tensions between activity system elements and between different scopes of activity. In response, I introduced new tools or processes or removed existing or potential barriers. I observed participants responding to tensions both in expected and novel ways.
+
+In the following sections of this chapter I focus on such which relate directly to the research questions and which help inform the findings of later chapters. In particular I draw out more visible conflicts which threaten more serious disruption of activities.
+
+
 ### Description of the nested levels of activity & tools used
 
 <!-- REWRITE THE BELOW - CHANGE FOCUS TO TOOLS /RESOURCES -->
@@ -465,9 +490,6 @@ The smaller activities used to kick start other game makers were an accelerated 
 The implementation of discreet but potentially shared game elements became a shared pattern of activity. Mutual work to produce resources, testing techniques and practices to share and evaluate these shared elements became a primary focus of work. This matches conceptions of germ cell concepts in the previous chapter from Engestrom.
 
 
-
-
-
 **Transition**
 
 It is useful to researchers to highlight possible tensions and contradictions between competing goals of interrelated activity systems.
@@ -476,6 +498,7 @@ For example a common contradiction may be an immediate goal of children to mess 
 
 
 As a starting point - a description of phases.
+
 
 
 
@@ -626,34 +649,6 @@ https://docs.google.com/document/d/1FIPn2dEB2aCKZi5z05j69cnHgpGNXFh1_SPV6h5l12g/
 <!-- NOTE - DEVELOP THIS ASPECT OF INCLUSIVE ENVIRONMENT TO REDUCE STRESS - MOVE FROM NEXT CHAPTER?  -->
 
 
-### Disambiguating terminology - Conflicts, tensions, contradictions, dilemmas
-
-
-As explored in the theoretical framework in activity theory tensions and contradictions are a vital source of change and evolution of new and ongoing activity systems.   
-
-To avoid the dangers of the vague use of the terms tensions and contractions [@karanasios_exploring_2017], this chapter will aim to be more descriptive.  
-
-While guided by teh concept of analyising manifestations of systemic contracditions, [cakir_contradictions_2022; engestrom_discursive_2011] this study does not use that detailed framework
-A wider lens is used instead, that of Rogoff's 3 foci helps to situate realms of contradictions.
-
-
-INSTEAD?
-
-
-NOTE - there is also the concept of congruencies - or strengths within activity systems. Where appropriate these systems strengths and positive alignments are helpful to note [@kamanga_contradictions_2021].
-
-
-On a smaller scale, design tensions exist. These do not block progress completely but may disrupt some activities. Combinations of tensions can compound to create longer lasting and more serious conflicts if not resolved [Engestrom early]. The concept of levels of contradictions are helpful [@sannino_cultural-historical_2018] the forth being a conflict.
-
-In Sannino's later work on transformational agency TADS conflicts are examined - greater scope than tensions - thus larger shifts are implied.
-
-It also useful to recap here the interpretations of agency explored in the theoretical framework. (NOTE IS IT OR SHOULD I JUST PICK TADS AND USE THAT LANGUAGE?) Instrumental agency is relevant here to help examine and the work of learning designers to remove  barriers, Transformational and authorial agency serves to explore the potential for learners to address and overcome tensions and conflicts in their own way.
-
-<!-- (Relational agency?) -->
-
-In the process of reflection on sessions I both observed and project tensions between activity system elements and between different scopes of activity. In response, I introduced new tools or processes or removed existing or potential barriers. I observed participants responding to tensions both in expected and novel ways.
-
-In the following sections of this chapter I focus on such which relate directly to the research questions and which help inform the findings of later chapters. In particular I draw out more visible conflicts which threaten more serious disruption of activities.
 
 ### Design tensions experienced as a researcher / designer
 
