--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -485,9 +485,11 @@ Proposed new location to first introduce this idea.
 
 P1 was chaotic, but yielded this way of working. Proposed new features, some where held in common with other groups.
 
-The smaller activities used to kick start other game makers were an accelerated version of the full process, proposing modification instead of new code structures.
+In keeping germ cell concept from Engestrom etc, other forms of activity evolved from this core idea.
 
-The implementation of discreet but potentially shared game elements became a shared pattern of activity. Mutual work to produce resources, testing techniques and practices to share and evaluate these shared elements became a primary focus of work. This matches conceptions of germ cell concepts in the previous chapter from Engestrom.
+The small, quick start activities used to kick start activity  game makers were an evolution from  the full process of adding a game pattner. The proposed code modification instead of new code structures accerated the process.
+
+The implementation of discreet but potentially shared game elements became a shared pattern of activity. Mutual work to produce resources, testing techniques and practices to share and evaluate these shared elements became a primary focus of work.
 
 
 **Transition**
