--- a/_posts/thesis_chapters/2023-9-5-Gdps.md
+++ b/_posts/thesis_chapters/2023-9-5-Gdps.md
@@ -95,7 +95,11 @@ The purpose of this chapter is to explore how the data gathered informs thinking
 - How can game design patterns support the development of coding practices by novices?
 - How can learners build agency in an evolving community of game makers?
 
-In the last chapter we explored inclusive pedagogical methods that helped participants become part of an emerging community of game makers. This chapter analyses a sub-activity system to the creation of the whole game, namely the implementation of individual game design patterns (GDPs).
+In the last chapter we explored inclusive pedagogical methods that helped participants become part of an emerging community of game makers.
+
+This chapter analyses a sub-activity system to the creation of the whole game, namely the implementation of individual game design patterns (GDPs).
+
+
 
 
 
@@ -127,25 +131,30 @@ And the coding structure here
 https://docs.google.com/document/d/19PafC_w_7uObYL4v86IGeeFZTw2yKxjHfP_k85rHk_s/edit# -->
 
 
-## Reframing design pattern in this context
+
+
+## Re-examing design patterns in this context
 
 Recap on the value of design patterns in learning design which exist at different scopes of activity [@mcandrew_patterns_2006].
 
 How design patterns interplay with design principles and how the process relates to design based research  [@linn_science_2006].
 
+### On GDP as a Germ cell and unit of Analysis
 
-NOTE  - WHERE TO PUT THIS?
+Both concepts are similar but different focus.
 
-### On GDP as a Germ cell / rising to the concrete
+    Thus the germ-cell and the unit of analysis are one and the same thing, but in one case the developmental aspect is emphasised and in the other case the analytical aspect is emphasised. [@blunden_unit_2020]
 
-The theoretical framework invites discussion on what is the germ cell of the overall game making activity. While this concept is more typically used in a larger scope of societal activity I invite discussion on how it applies at this smaller scope.  I propose that it is the  implementation of game features design pattern that forms the germ cell of this game making activity.
+The theoretical framework invites discussion on what is the germ cell of the overall game making activity.
 
-The smaller changes described in the last chapter constitute a formative, scaffolding process to help participants prepare for the foundational activity of deciding on and implementing gameplay design patterns.
+While this concept is more typically used in a larger scope of societal activity, the principles apply this smaller scope. The core concept of altering a game at the level of gameplay design pattern which emerged from experimental pilot process is adapted by participants and used in various forms of activity.
 
+For example, in the last chapter I described how the smaller quick changes could provide a scaffolded process to help participants engage with game making, the process of which was an adaptation of the foundational activity of deciding on and implementing gameplay design patterns.
 
 
 ### On GDP as unit of analysis
 
+COMPRESS THIS OR DROP OR MOVE? - IT DOESN'T ADD A GREAT DEAL TO THE END FINDINGS?
 
 The implementation of GDPs as a unit of analysis for the researcher also has the following utility / validity;
 
