--- a/_posts/thesis_chapters/2023-9-5-Gdps.md
+++ b/_posts/thesis_chapters/2023-9-5-Gdps.md
@@ -93,7 +93,7 @@ To help the reader understand the data in this chapter the following notes on in
 The purpose of this chapter is to explore how the data gathered informs thinking on two research questions of this study.  
 
 - How can game design patterns support the development of coding practices by novices?
-- How can learners build agency in an evolving community of game makers?
+- How can participants build agency in an evolving community of game makers?
 
 In the last chapter we explored inclusive pedagogical methods that helped participants become part of an emerging community of game makers.
 
@@ -145,6 +145,11 @@ Both concepts are similar but different focus.
 
     Thus the germ-cell and the unit of analysis are one and the same thing, but in one case the developmental aspect is emphasised and in the other case the analytical aspect is emphasised. [@blunden_unit_2020]
 
+
+As a designer / researcher and practitioner both aspects are relevant.
+
+#### On GDPs as a germ concept to help development
+
 The theoretical framework invites discussion on what is the germ cell of the overall game making activity.
 
 While this concept is more typically used in a larger scope of societal activity, the principles apply this smaller scope. The core concept of altering a game at the level of gameplay design pattern which emerged from experimental pilot process is adapted by participants and used in various forms of activity.
@@ -152,7 +157,7 @@ While this concept is more typically used in a larger scope of societal activity
 For example, in the last chapter I described how the smaller quick changes could provide a scaffolded process to help participants engage with game making, the process of which was an adaptation of the foundational activity of deciding on and implementing gameplay design patterns.
 
 
-### On GDP as unit of analysis
+#### On GDPs as a concept to help analysis
 
 COMPRESS THIS OR DROP OR MOVE? - IT DOESN'T ADD A GREAT DEAL TO THE END FINDINGS?
 
@@ -167,9 +172,8 @@ The implementation of GDPs as a unit of analysis for the researcher also has the
 This sentiment is echoed by something I found in the video data. As one parent expressed when looking at the documentation for implementing one of the GDPs. "It’s like a project in itself really"
 
 
-Analysing the implementation of GDPs as a unit of activity allows the use of useful concepts to explore the specifics of participant behaviour. In the methodology and design chapter I explored the concept of resolving tensions involved in tool use and interaction with the learning design. In this section I briefly explore the utility of the concepts of activity, actions and operations when applied to implementing GDPs [@kuutti_activity_1995].
+Analysing the implementation of GDPs as a unit of activity allows the use of useful concepts to explore the specifics of participant behaviour. In the methodology and design chapter I explored the concept of resolving tensions involved in tool use and interaction with the learning design.
 
-  "...actions consist of chains of operations, which are well-defined habitual routines used as answers to conditions faced during the performing of the action. Initially each operation is a conscious action, consisting of both the orientation and execution phases, but when the corresponding model is good enough and the action has been practiced long enough, the orientation phase will fade and the action will be collapsed into an operation, which is much more fluent." [@kuutti_activity_1995]
 
 
 
@@ -1087,7 +1091,20 @@ References to such emerging practices driven by GDPs were present in many exchan
 
 There are many other examples of processes being adopted by participants through the implementation of GDPs including the fluidity of navigation between playing and coding window shown by all younger participants and many adults and the development of keyboard and mouse coordination to facilitate navigation within the code environment and external support resources to facilitate the code patching process.
 
-<!-- (NOTE - OPERATION, ACTION, ACTIVITY - explore in aT part of this chapte ) -->
+
+### Repeated implementations of GDP developing  fluency of coding practices
+
+<!-- (NOTE - SHOULD THIS BE EARLIER? 
+
+OPERATION, ACTION, ACTIVITY - explore in aT part of this chapte ) -->
+
+In this section I briefly explore the utility of the concepts of activity, actions and operations when applied to implementing GDPs [@kuutti_activity_1995].
+
+  "...actions consist of chains of operations, which are well-defined habitual routines used as answers to conditions faced during the performing of the action. Initially each operation is a conscious action, consisting of both the orientation and execution phases, but when the corresponding model is good enough and the action has been practised long enough, the orientation phase will fade and the action will be collapsed into an operation, which is much more fluent." [@kuutti_activity_1995]
+
+This fluency is a key for learners developing elements of agency as lack of fluency prevents effective
+
+
 
 
 <!--
@@ -1153,6 +1170,8 @@ In the area of product revision the repeated, solo, incremental changes of the d
 <!-- While the use of debugging tools and processes are often introduced to solve a particular problem in implementing one GDP. The same process is uses to solve issues that crop up while implementing other patterns. Throughout the recordings, some individuals show an evolution of problem solving knowledge and processes in relation to coding through their independent work.
 CAN i FIND ANY KEY EXAMPLES OF THIS?
 -->
+
+
 
 ### GDPs used to explore computational, design and systems concepts
 
