--- a/_posts/thesis_chapters/2023-9-5-Gdps.md
+++ b/_posts/thesis_chapters/2023-9-5-Gdps.md
@@ -1094,7 +1094,7 @@ There are many other examples of processes being adopted by participants through
 
 ### Repeated implementations of GDP developing  fluency of coding practices
 
-<!-- (NOTE - SHOULD THIS BE EARLIER? 
+<!-- (NOTE - SHOULD THIS BE EARLIER?
 
 OPERATION, ACTION, ACTIVITY - explore in aT part of this chapte ) -->
 
@@ -1102,7 +1102,12 @@ In this section I briefly explore the utility of the concepts of activity, actio
 
   "...actions consist of chains of operations, which are well-defined habitual routines used as answers to conditions faced during the performing of the action. Initially each operation is a conscious action, consisting of both the orientation and execution phases, but when the corresponding model is good enough and the action has been practised long enough, the orientation phase will fade and the action will be collapsed into an operation, which is much more fluent." [@kuutti_activity_1995]
 
-This fluency is a key for learners developing elements of agency as lack of fluency prevents effective
+This fluency is a key for learners developing elements of agency as lack of fluency prevents effective x.
+
+RECAP ON ELEMENT OF Agency,
+
+-  expression
+-  etc
 
 
 
