--- a/_posts/thesis_chapters/2023-9-5-Gdps.md
+++ b/_posts/thesis_chapters/2023-9-5-Gdps.md
@@ -1277,6 +1277,34 @@ In teaching computing pedagogy the concept of levels of abstraction can be taugh
 
 This conception of levels abstraction is also present in the analysis of the different scopes game making activity systems. Through this lens the most abstract activity system is the larger one who's objective, to make an engaging game that tells an environmental story, aligns with the problem level of LOA. The level between abstract and concrete is that of choosing, implementing and testing game design patterns, which aligns with design. The most concrete in this interpretation is then the implementation of different lines of code or creation and migration of digital assets.
 
+
+
+#### Analysis against (and calls to heed) existing design heuristics - AS THIS ADDRESSES GDP TOO THIS WAS MOVED  TO GDP CHAPTER (OR TO DISCUSSION CHAPTER OR DESIGN)
+
+Earlier (cr), we examined of challenges of the authenticity of the authentic tools set consisting of js, phaser, html, and a code-playround.
+
+The complexity of coding and the resulting challenges of learning to code has yield much research on guidance in the process of designing toolsets to support novice coders [@resnick_reflections_2005] - (find others on the evolution of LOGO).  
+
+The user-friendly design heuristics of  low-thresholds, wide-walls, high-ceiling
+NOTE WHY IS THIS METAPHOR USEFUL - CLARIFYs - extended by Kafai and Burke to include open windows - can be used to evaluate this design and other designs.  
+
+NOTE - ADD KEY DETAILS OF THE ACCESSIBILITY / CHALLENGE OF THE CORE TOOLS SET
+
+In this design the tools set is distinct from tools like scratch which are self-contained to a large degree (while interacting with a website) - thus bears greater similarity with the Mircoworld concepts.
+
+The online only nature of the toolset does facilitate certain aspects of community participation by shifting the working space away from a desktop only environment, this facilitating some sharing by default. This was picked up on by the community as they viewed each others assets and playtested games.
+
+Indeed, Scratch itself has moved to a web-bsaed online by default process in the lifespan of this research.  
+
+**How Resnick's design principles / heuristics differ from use of GDPs and processes in this chapter:**
+
+While these heuristics provide a useful tool for designers and practitioners supporting creative coding activities there is less intrinsic guidance to help seed community practices. While useful community tools like remix, online sharing, and collabs are part of the community, the focus of the project and of much of the surrounding research is on a broadly creative tool set rather than to accelerate a group process.
+
+**Future work** MakeCode Arcade shows promise as an easier to use microworld geared to the use of design patterns. While this is beyond the remit of this study I did gather data. However, I would regather to allow for better focus of research questions.  
+
+
+
+
 #### Implications for facilitators and designers
 
 In professional coding environment and training programmes design patterns, particularly in object-oriented approaches and in the domains HCI are seen as a middle ground between abstract CT concepts and more concrete techniques.
