--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -1251,7 +1251,12 @@ Extra missions which highlight game challenge and user experience may help learn
 
 
 
-### Limits to the learning dimensions map in an informal setting
+### Resolving the conflict by discarding this approach
+
+Ultimately I gave up on this approach as it 
+
+
+#### Limits to the learning dimensions map in an informal setting
 
 This map was designed to link with particular conceptions of learning whilst still retaining a sense of the uniqueness of the affordances of this design. The settings are, CT in school curriculums, systems thinking, design approaches. These align broadly with a STEM approach. The rationale behind this is that Game Making commonly aligns with these curriculum areas and they are particularly suited to explore via iterative game making.
 
