structure and notes

--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -193,12 +193,12 @@ https://tabletomarkdown.com/convert-spreadsheet-to-markdown/
 
 The themes that emerged above.
 
-One key issue is the clash of cultures.
+One key issue is the clash of cultures. EDIT DOWN AND COMMENT
 
 
     There's this idea of a clash of cultures where to learn like the dominant school culture, you have to release some of your self-identity or you need to learn to bridge these worlds. And I think at least in the writing, the literature, that there's this resistance of seeing yourself as someone who does  STEM, as someone who does computer science. It's like we're not people that do that. And I think by doing it with their family, like there's no better way to kind of mitigate that effect and that hesitation, that barrier, because they're all becoming your whole family, like your, your closest identity is becoming people that write code or people that make robots.
 
-
+This interview references research already explored in the literature review concerning identity and alienation from STEM contexts.  
 
 <!-- The design description is framed within DBR language and concepts. -->
 <!-- Section describing  Game Design Patterns as  the main unit of Activity. See Blunden to frame this and to describe the utility of the idea  [@blundenInterdisciplinaryConceptActivity2009; @blundenGermCellUnit2014]. -->
@@ -262,9 +262,11 @@ Screen shot of the menu of choices. -->
 
 ## Short vignette illustrating shifts in scope of activity
 
-### Outline of Game Making Tools used in this vignette
+### Outline of Game Making Tools used in this vignette - ANY SPACE IN LIT REVIEW?
 
 These tools are of use by both professionals and novice coders. The use by indy communities blurs the line also.
+
+EDIT THIS DOWN AND REFER TO GLOSSARY AND LATER SECTION
 
 #### Code Playgrounds
 
@@ -272,6 +274,9 @@ Find definition
 
 NOTES ON CODE PLAYGROUNDS
 However in its styling it is playful and editorial picks and write up celebrate a playful spirit of creativity and sharing. There are strong parallels in this presentation to that Scratch community and to the sharing ethos integral to the maker-movement (explored in Lit Review). The interplay between play and work via shared experimentation is developed further in a later discussion chapter.
+
+#### Online graphics editors - Piskel
+
 
 
 ### Context of  Vignette
@@ -355,7 +360,7 @@ In the process of reflection on sessions I both observed and project tensions be
 In the following sections of this chapter I focus on such which relate directly to the research questions and which help inform the findings of later chapters. In particular I draw out more visible conflicts which threaten more serious disruption of activities.
 
 
-### Description of the nested levels of activity & tools used
+### Description of the nested levels of activity & tools used - CHANGE TO MOSTLY SIGN POSTING - EDIT DOWN
 
 <!-- REWRITE THE BELOW - CHANGE FOCUS TO TOOLS /RESOURCES -->
 
@@ -561,7 +566,7 @@ using the phaser javascript game library (glitch.com), a pixel art editor (piske
 
 In terms of supporting resources, stage one was responsive; I had no pre-existing supporting materials and created a starting code framework of a platform game and code examples to add extra functionality to the game as the programme developed.
 
-A final public showcase - At the end of this stage participants showed their games to students in the foyer of the MMU Brooks building and gave me feedback on their participation in the programme.
+A final public showcase - At the end of this stage participants showed their games to students in the foyer of the MMU Brooks building and gave me feedback on their participation in the programme. Feedback notes are included as appendix 4.x
 
 Feedback from participants this stage included; a general consensus that the process was too long and that more guidance in the process of familiarising themselves the coding tools initially before undertaking ideation would be useful.
 
@@ -775,9 +780,13 @@ While, initially conceived as a starting activity, many learners stuck with thos
 
 ### 2. Participant conflict due to lack of relevant technical support
 
-**2. Frustrating delays - Not enough support from facilitator/s:  especially tech help - no dedicated documents, exiting docs not learner focused, coding process frustrating needing**
+**Frustrating delays - Not enough support from facilitator/s:  especially tech help - no dedicated documents, exiting docs not learner focused, coding process frustrating needing**
 
-The nature of this conflict stemmed from tensions surrounding  and knowledge of coding and lack of access to relevant technical support.
+As P1 of the program developed from
+
+the program develop
+
+The nature of this conflict stemmed from tensions surrounding and knowledge of coding and lack of access to relevant technical support.
 
 The conflict was distinct from the previous one in that it related less to identity and alienation from the whole process and was manifested in periods of frustration and inactivity where participants wanted to progress but were unable to.
 
